[package]
name = "xsus"
version = "0.1.1"
authors = ["Maini Lotfi <mainilotfi@gmail.com>"]
edition = "2024"
description = "Native HTTP client library built for high performance systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phantekzy/xsus"
keywords = ["http", "client", "native", "zero-dependency", "networking"]
categories = ["network-programming"]

[dependencies]
